change binary from dateconverter to ndc

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,4 @@
 AM_CFLAGS=-Wall -g -DVERSION=\"$(VERSION)\"
 AM_LDFLAGS=
-bin_PROGRAMS = dateconverter
-dateconverter_SOURCES = dateconverter.c dc.c util.c dateconverter.h util.h
+bin_PROGRAMS = ndc
+ndc_SOURCES = dateconverter.c dc.c util.c dateconverter.h util.h
